#116: Ability to use global flags when executing actions from UI
