# server/openapi.yaml
@@ -278,6 +278,16 @@ components:
               x-go-type: "action.InputParams"
               x-go-type-import:
                 path: "github.com/launchrctl/launchr/pkg/action"
+            runtime:
+              type: object
+              x-go-type: "action.InputParams"
+              x-go-type-import:
+                path: "github.com/launchrctl/launchr/pkg/action"
+            globals:
+              type: object
+              x-go-type: "action.InputParams"
+              x-go-type-import:
+                path: "github.com/launchrctl/launchr/pkg/action"
             changed:
               type: array
               items:
